--- a/FileMan/Base.lproj/LaunchScreen.storyboard
+++ b/FileMan/Base.lproj/LaunchScreen.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -21,6 +21,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="squareColor" translatesAutoresizingMaskIntoConstraints="NO" id="8uf-n6-3nY">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FileMan Icon" translatesAutoresizingMaskIntoConstraints="NO" id="qEx-PF-Xoq">
                                 <rect key="frame" x="124" y="277" width="127" height="112"/>
                                 <constraints>
@@ -28,27 +31,33 @@
                                     <constraint firstAttribute="height" constant="112" id="hgr-EG-YKU"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="v1.1.0 (12)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Equ-zO-LAo">
-                                <rect key="frame" x="163.5" y="652" width="48" height="12"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="v1.0.0 (12)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Equ-zO-LAo">
+                                <rect key="frame" x="163" y="652" width="49.5" height="12"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="Equ-zO-LAo" secondAttribute="bottom" constant="3" id="0Ob-Zc-mq8"/>
+                            <constraint firstItem="8uf-n6-3nY" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="Cyo-J2-HLZ"/>
                             <constraint firstItem="qEx-PF-Xoq" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="HbK-hj-bCS"/>
                             <constraint firstItem="qEx-PF-Xoq" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Tkj-Lh-n4U"/>
+                            <constraint firstItem="8uf-n6-3nY" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="hXA-aH-Bjl"/>
+                            <constraint firstAttribute="trailing" secondItem="8uf-n6-3nY" secondAttribute="trailing" id="hv5-Gq-rJJ"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="8uf-n6-3nY" secondAttribute="bottom" id="lAB-uR-CMZ"/>
                             <constraint firstItem="Equ-zO-LAo" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="zhU-wk-zJG"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="51.5" y="374.5"/>
         </scene>
     </scenes>
     <resources>
         <image name="FileMan Icon" width="321" height="284"/>
+        <image name="squareColor" width="250" height="250"/>
     </resources>
 </document>
